--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^14.6.0",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "eslint": "^7.7.0",
-    "eslint-config-standard-with-typescript": "^11.0.1",
-    "eslint-plugin-import": "^2.22.0",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "eslint": "^7.2.0",
+    "eslint-config-standard-with-typescript": "^16.0.0",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "git-commit-msg-linter": "^2.4.4",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "lint-staged": "^10.2.11",
-    "typescript": "^4.0.2"
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.5"
   }
 }
