--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "clean-arq-react",
+  "name": "clean-react",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^26.0.0",
-    "@types/node": "^14.0.13",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "eslint": "^7.2.0",
-    "eslint-config-standard-with-typescript": "^16.0.0",
-    "eslint-plugin-import": "^2.21.2",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.5",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "git-commit-msg-linter": "^2.4.4",
+    "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.11",
-    "ts-jest": "^26.1.0",
-    "typescript": "^3.9.5"
+    "jest": "^25.5.4",
+    "lint-staged": "^10.2.2",
+    "ts-jest": "^25.5.0",
+    "typescript": "^3.8.3"
   }
 }
