--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.2",
@@ -50,6 +51,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   }
 }
