--- a/package.json
+++ b/package.json
@@ -9,43 +9,44 @@
     "test:clear": "jest -- --clearCache",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage"
+    "test:ci": "npm test -- --coverage",
+    "check": "npm-check -u -s"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@testing-library/react": "^11.0.2",
+    "@testing-library/react": "^11.0.4",
     "@types/axios": "^0.14.0",
-    "@types/faker": "^4.1.12",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.5",
+    "@types/faker": "^5.1.0",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.2.2",
-    "eslint": "^6.8.0",
-    "eslint-config-standard-with-typescript": "^11.0.1",
+    "css-loader": "^4.3.0",
+    "eslint": "^7.9.0",
+    "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
-    "faker": "^5.0.0",
-    "git-commit-msg-linter": "^2.4.2",
-    "husky": "^4.2.5",
+    "faker": "^5.1.0",
+    "git-commit-msg-linter": "^2.6.0",
+    "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.5.4",
+    "jest": "^26.4.2",
     "jest-localstorage-mock": "^2.4.3",
-    "lint-staged": "^10.2.2",
+    "lint-staged": "^10.3.0",
     "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.1",
+    "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
-    "ts-jest": "^25.5.0",
+    "ts-jest": "^26.3.0",
     "ts-loader": "^8.0.3",
-    "typescript": "^3.8.3",
+    "typescript": "^4.0.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
